@@ -8,4 +8,5 @@ Description: A streaming audio output API derived from mpg123
 Requires: 
 Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -lout123 
+Libs.private: @LIBOUT123_LIBS@ @LIBDL@
 Cflags: -I${includedir} 
